--- a/Week-2/Q_2.1/main.css
+++ b/Week-2/Q_2.1/main.css
@@ -2,25 +2,59 @@
     display:flex;
     justify-content: center;
     background-color: lightpink;
+    border-radius: 10px;
+}
+
+a{
+    color:inherit;
+    text-decoration: none;
 }
 
 .content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
+
+.leftContent{
+    margin-right: 10px;
+    margin-left:10px;
+}
+
+.rightContent{
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 
 .inputForm{
     display: flex;
     flex-direction: column;
+    margin-left:10px;
+    border-top: 1px solid grey;
 }
 
 .inputForm div{
     width: 500px;
+    margin:5px 0px;
 }
 
 .submitButton{
     display: flex;
     flex-direction: row;
+    margin-top:5px;
+}
+
+.submitButton button{
+    background-color: grey;
+    border-radius:5px;
+}
+
+.submitButton button:hover{
+    background-color: darkgray;
+    cursor:pointer;
 }
 
 .submitButton button{
@@ -35,16 +69,46 @@ label {
   footer{
     background-color: grey;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
+    border-radius: 10px;
   }
 
 
   footer div ul{
     list-style: none;
+    display: flex;
+    flex-direction: column;
+
   }
 
+  footer div ul li{
+    margin-top: 5px;
+    justify-content: left;
+
+  }
+
+  /* for large devices */
+  @media only screen and (min-width: 769px) {
+    .content{
+        flex-direction: row;
+        flex-wrap: nowrap;
+
+    }
+
+    .rightContent{
+        justify-content: space-between;
+
+    }
+
+    footer{
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+
+
+   }
 
 
 
